--- a/src/OpenTelemetry.Contrib.Instrumentation.AWS/OpenTelemetry.Contrib.Instrumentation.AWS.csproj
+++ b/src/OpenTelemetry.Contrib.Instrumentation.AWS/OpenTelemetry.Contrib.Instrumentation.AWS.csproj
@@ -4,7 +4,8 @@
     <!-- OmniSharp/VS Code requires TargetFrameworks to be in descending order for IntelliSense and analysis. -->
     <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
     <Description>AWS client instrumentation for OpenTelemetry .NET</Description>
-	<MinVerTagPrefix>Instrumentation.AWS-</MinVerTagPrefix>
+	  <MinVerTagPrefix>Instrumentation.AWS-</MinVerTagPrefix>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
