--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -30,7 +30,7 @@ components:
   src/OpenTelemetry.Extensions.Docker/:
     - iskiselev
   src/OpenTelemetry.Extensions.Enrichment/:
-    - evgenyfedorov2
+    - xakep139
   src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/:
     - vishweshbankwar
   src/OpenTelemetry.Extensions.PersistentStorage/:
