--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -100,6 +100,8 @@ components:
     - codeblanch
   test/OpenTelemetry.Extensions.Docker.Tests/:
     - iskiselev
+  test/OpenTelemetry.Extensions.Enrichment.Tests/:
+    - xakep139
   test/OpenTelemetry.Extensions.PersistentStorage.Tests/:
     - vishweshbankwar
   test/OpenTelemetry.Instrumentation.AWSLambda.Tests/:
