--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -31,6 +31,8 @@ components:
     - iskiselev
   src/OpenTelemetry.Extensions.Enrichment/:
     - xakep139
+  src/OpenTelemetry.Extensions.Enrichment.AspNetCore/:
+    - xakep139
   src/OpenTelemetry.Extensions.PersistentStorage.Abstractions/:
     - vishweshbankwar
   src/OpenTelemetry.Extensions.PersistentStorage/:
@@ -101,6 +103,8 @@ components:
   test/OpenTelemetry.Extensions.Docker.Tests/:
     - iskiselev
   test/OpenTelemetry.Extensions.Enrichment.Tests/:
+    - xakep139
+  test/OpenTelemetry.Extensions.Enrichment.AspNetCore.Tests/:
     - xakep139
   test/OpenTelemetry.Extensions.PersistentStorage.Tests/:
     - vishweshbankwar
