--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -29,4 +29,4 @@ jobs:
       run: dotnet tool install -g dotnet-format
 
     - name: dotnet format
-      run: dotnet-format --folder --check
+      run: dotnet format .\opentelemetry-dotnet-contrib.sln --no-restore --verify-no-changes
